--- a/TvtAudioStretchFilter_src/TvtAudioStretchFilter.vcxproj
+++ b/TvtAudioStretchFilter_src/TvtAudioStretchFilter.vcxproj
@@ -71,7 +71,6 @@
     <TargetExt>.ax</TargetExt>
     <IncludePath>..\..\soundtouch\include;..\..\baseclasses;$(IncludePath)</IncludePath>
     <LibraryPath>..\..\soundtouch\lib;..\..\baseclasses\$(Configuration);$(LibraryPath)</LibraryPath>
-    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -84,7 +83,6 @@
     <TargetExt>.ax</TargetExt>
     <IncludePath>..\..\soundtouch\include;..\..\baseclasses;$(IncludePath)</IncludePath>
     <LibraryPath>..\..\soundtouch\lib;..\..\baseclasses\$(Configuration);$(LibraryPath)</LibraryPath>
-    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -106,7 +104,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>SoundTouchD.lib;winmm.lib;strmbasd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
-      <AdditionalOptions>/PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent />
   </ItemDefinitionGroup>
@@ -124,7 +121,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>SoundTouchD(x64).lib;winmm.lib;strmbasd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
-      <AdditionalOptions>/PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent />
   </ItemDefinitionGroup>
@@ -141,12 +137,11 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>SoundTouch.lib;winmm.lib;strmbase.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
-      <AdditionalOptions>/PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent />
   </ItemDefinitionGroup>
@@ -163,12 +158,11 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>SoundTouch(x64).lib;winmm.lib;strmbase.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
-      <AdditionalOptions>/PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent />
   </ItemDefinitionGroup>
